# agent_orchestration

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.agents  Dockerfile.orchestrator  EVALS.md  README.md  REQUIREMENTS.md  SETUP.md  USAGE.md  _mcp.json  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: adapters.instructions.md  evals.instructions.md  go-services.instructions.md  python-agents.instructions.md
.github/workflows/: container-images.yml
adapters/: __init__.py  base.py  mcp_config.py  scrape_badger.py  stdio.py  travel_hacking.py  twitter_mcp.py
agent_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: server.py
agents/base/: __init__.py  agent.py  llm.py  memory.py  repository.py  safety.py  types.py
agents/flights/: __init__.py  agent.py  tools.py
agents/marketplace/: __init__.py  agent.py  tools.py
agents/stay/: __init__.py  agent.py  tools.py
agents/twitter/: __init__.py  agent.py  tools.py
evals/: __init__.py  conftest.py  golden_cases.py  judges.py  run_evals.py  runner.py  test_agent_scope.py  test_database.py  test_eval_modes.py  test_flights_booking_links.py  test_flights_query_parsing.py  test_hallucination.py  test_latency.py  test_marketplace_e2e.py  test_mcp_transport.py  test_routing.py  test_safety.py  test_server.py  test_stay_search_links.py  test_tool_correctness.py  test_trajectory.py  test_twitter_e2e.py  test_twitter_mcp.py
tools/: flights.py  marketplace.py  stay.py  twitter.py
(+33 files in other folders)
