[project]
name = "agent-orchestration"
version = "0.1.0"
description = "Multi-agent AI orchestration platform — Python agent runtime"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "grpcio>=1.65.0",
    "grpcio-tools>=1.65.0",
    "langsmith>=0.1.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]

[tool.ruff]
target-version = "py311"
line-length = 100
